<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cue Splitter</string>

    <string name="menu_select_cue">Select Cue File</string>
    <string name="menu_cut_cue">Split Cue</string>
    <string name="menu_cut_settings">Settings</string>
    <string name="menu_new_folder">New Folder</string>

    <string name="splitting">Splitting...</string>
    <string name="reading">Reading...</string>
    <string name="choose_cue_file">Select cue file for split</string>

    <string name="folder_cannot_read">Folder can not be read!</string>

    <string name="select_folder">Select target folder</string>
    <string name="done">Done</string>

    <string name="create_new_folder">Create new folder</string>
    <string name="input_folder_name">Input new folder name</string>
    <string name="cant_create_folder">Can not create folder</string>


    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="pref_default_folder">Default folder settings</string>
    <string name="pref_default_folder_is_enabled">Enable default folder</string>
    <string name="pref_default_folder_value">Select default folder</string>

    <string name="pref_id3_tags_settings">ID3 tags settings</string>
    <string name="pref_use_id3_tags">Use ID3 tags</string>


    <string name="smth_wrong">Something wrong!</string>
    <string name="cant_read_sound_file">Can not read source file</string>
    <string name="cant_lookup_sound_file">Can not lookup source file</string>
    <string name="cant_write_sound_file">Can not write files to selected directory</string>


    <string name="splitting_done">Splitting is done!</string>

    <string name="select_media_file">Select source media file</string>



</resources>
