<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <android.preference.PreferenceCategory android:title="@string/pref_default_folder">

        <CheckBoxPreference
                android:key="default_folder_key"
                android:defaultValue="false"
                android:title="@string/pref_default_folder_is_enabled"
                />

        <com.cue.splitter.view.CustomPreferenceDialog
                android:key="default_folder_value_key"
                android:defaultValue="@string/root"
                android:title="@string/pref_default_folder_value"
                android:dependency="default_folder_key"
                />


    </android.preference.PreferenceCategory>


    <android.preference.PreferenceCategory android:title="@string/pref_id3_tags_settings">
        <CheckBoxPreference
                android:key="use_id3_tags_key"
                android:defaultValue="true"
                android:title="@string/pref_use_id3_tags"
                />

    </android.preference.PreferenceCategory>
</PreferenceScreen>